<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/menu_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_menu_close" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentBottom="true"
            android:background="#929292"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/logo"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#929292"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_home"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:src="@drawable/ic_menu_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

        <RelativeLayout
            android:id="@+id/menu_search"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_search"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:src="@drawable/ic_menu_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

        <RelativeLayout
            android:id="@+id/menu_download"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_download"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:src="@drawable/ic_menu_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

        <RelativeLayout
            android:id="@+id/menu_top20"
            android:layout_width="match_parent"
            android:layout_height="60dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_top20"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:src="@drawable/ic_menu_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

        <RelativeLayout
            android:id="@+id/menu_profile"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_profile"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:src="@drawable/ic_menu_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

        <RelativeLayout
            android:id="@+id/menu_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:text="@string/menu_logout"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#929292"/>

    </LinearLayout>

</LinearLayout>